# aoe-data-util

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
data/: players.json  players.yaml  teams.json
src/: cli.rs  error.rs  lib.rs  main.rs  players.rs  teams.rs
src/core/: parsing.rs
src/datalists/: mod.rs  platforms.rs
src/lists/: mod.rs
